--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./components/global";
 @import "./components/header";
 @import "./components/logo";
+@import "./components/mobile-menu";
 @import "./components/hero";
 @import "./components/btn";
 @import "./components/modal";
