--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,11 +1,12 @@
 .header {
   border-bottom: $headerBorder solid 1px;
+  position: relative;
 
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 24px 15px;
+    padding: 10px 15px;
   }
 
   &__nav {
@@ -17,6 +18,7 @@
     gap: 46px;
     align-items: center;
     padding-left: 93px;
+    display: none;
   }
 
   &__nav-item {
@@ -55,11 +57,14 @@
 
   &__contact-list {
     display: flex;
-    gap: 50px;
+    flex-direction: column;
+    gap: 10px;
+    display: none;
   }
 
   &__contact-link {
     display: flex;
+    gap: 10px;
     color: $text;
     align-items: center;
     fill: $text;
@@ -77,7 +82,43 @@
     }
   }
 
-  &__icon {
-    margin-right: 10px;
+  &__hamburger {
+    fill: $body;
+    transition-property: fill;
+    transition-duration: $transitionDurationDefault;
+    transition-timing-function: $transitionTimingDefault;
+
+    &:hover,
+    &:focus {
+      fill: $brand;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .header__container {
+    padding: 18px 15px;
+  }
+  .header__contact-list {
+    display: flex;
+  }
+  .header__nav-list {
+    display: flex;
+  }
+  .header__nav-item--line:after {
+    transform: translateY(44px);
+  }
+}
+
+@media (min-width: 1200px) {
+  .header__container {
+    padding: 24px 15px;
+  }
+  .header__contact-list {
+    flex-direction: row;
+    gap: 50px;
+  }
+  .header__nav-item--line:after {
+    transform: translateY(45px);
   }
 }
