--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -24,7 +24,9 @@
 
 .modal {
   position: relative;
-  width: 528px;
+  max-width: 450px;
+  width: 100%;
+  margin: 0 15px;
   background-color: $white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -34,10 +36,22 @@
   transition-property: transform, border-radius;
   transition-duration: 0.4s;
   transition-timing-function: $transitionTimingDefault;
-  padding: 40px;
+  padding: 20px 40px;
 
   .is-hidden & {
     transform: scale(0.1);
     border-radius: 50%;
+  }
+}
+
+@media (min-width: 768px) {
+  .modal {
+    padding: 40px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
   }
 }
