--- a/scss/components/_our-strengths.scss
+++ b/scss/components/_our-strengths.scss
@@ -1,10 +1,13 @@
 .our-strengths {
   display: flex;
+  flex-direction: column;
   gap: 30px;
 
   &__icon {
     background-color: $ourStrenghtsIconBg;
     margin-bottom: 30px;
+    width: 100%;
+    text-align: center;
   }
 
   &__titles {
@@ -20,5 +23,23 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+  }
+}
+
+@media (min-width: 768px) {
+  .our-strengths {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    &__item {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .our-strengths {
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 }
