--- a/scss/components/_portfolio-cards.scss
+++ b/scss/components/_portfolio-cards.scss
@@ -4,13 +4,9 @@
   gap: 30px;
   justify-content: center;
 
-  &__figure {
-    margin: 0;
-
-    &:hover {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
+  &__figure:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 
   &__box {
