--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -51,7 +51,7 @@
     gap: 32px;
   }
 
-  &__contakt-tel {
+  &__contact-tel {
     font-weight: 500;
     font-size: 34px;
     line-height: 1.18;
@@ -59,7 +59,7 @@
     color: $brand;
   }
 
-  &__contakt-email {
+  &__contact-email {
     font-weight: 500;
     font-size: 24px;
     line-height: 1.17;
