--- a/scss/components/_portfolio-cards.scss
+++ b/scss/components/_portfolio-cards.scss
@@ -23,7 +23,7 @@
     position: absolute;
     top: 0;
     background-color: $portfolioCardsBg;
-    transform: translateY(100%);
+    transform: translateY(148%);
     transition: transform $transitionDurationDefault $transitionTimingDefault;
 
     .portfolio-cards__figure:hover & {
@@ -32,10 +32,10 @@
   }
 
   &__description {
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 13px;
+    line-height: 1.56;
     color: $white;
-    padding: 49px 45px 49px 24px;
+    padding: 49px 45px 145px 24px;
   }
 
   &__figcaption {
@@ -56,5 +56,16 @@
     color: $text;
     font-size: 16px;
     line-height: 1.88;
+  }
+}
+
+@media (min-width: 420px) {
+  .portfolio-cards__description {
+    font-size: 18px;
+    padding-bottom: 49px;
+  }
+
+  .portfolio-cards__overlay {
+    transform: translateY(100%);
   }
 }
